# baKokkos

./: .gitignore  CMakeLists.txt  Coord3D.cpp  Coord3D.h  CubeClosestPacked.h  DirectSumParticleContainer.cpp  DirectSumParticleContainer.h  Doxyfile  Doxyfile.in  LinkedCell.cpp  LinkedCell.h  LinkedCellsParticleContainer.cpp  LinkedCellsParticleContainer.h  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleCuboid.h  ParticleGroup.cpp  ParticleGroup.h  ParticlePropertiesLibrary.cpp  ParticlePropertiesLibrary.h  Simulation.cpp  Simulation.h  SimulationConfig.cpp  SimulationConfig.h  YamlParser.cpp  YamlParser.h  doxygen.cmake  main.cpp
input/: Sphere.yaml  cube.yaml  cube2.yaml  fallingDrop.yaml  gaussianGenerator.yaml  oneParticle.yaml  oneParticlePerCell.yaml  sphere.yaml  sphere2.yaml  veryLargeSphere.yaml
src/: BoundaryCondition.h  LinkedCellsParticleContainer.cpp  LinkedCellsParticleContainer.h  Simulation.cpp  Simulation.h  SimulationConfig.h  main.cpp
src/Containers/: Cell.cpp  Cell.h  Coord3D.h  LinkedCellsParticleContainer.cpp  LinkedCellsParticleContainer.h  Particle.h  ParticleContainer.h  ParticleProperies.h  ParticlePropertiesLibrary.cpp  ParticlePropertiesLibrary.h
src/Functors/: CalculateForces.h  CalculateVelocitiesAndPositions.h  FunctorData.h  MoveParticles.h
src/Helper/: Coord3D.h  Particle.h
src/ParticleContainers/: ParticleContainer.h
src/ParticleContainers/DirectSum/: DirectSumParticleContainer.h
src/ParticleContainers/LinkedCells/: Cell.cpp  Cell.h  LinkedCellsParticleContainer.cpp  LinkedCellsParticleContainer.h
src/SimulationConfig/: Constants.h  CubeClosestPacked.h  GaussianGenerator.h  Parser.h  ParticleCuboid.h  ParticleGroup.h  ParticleGroupContainer.h  ParticleSphere.h  SimulationConfig.h  YamlParser.cpp  YamlParser.h
src/Types/: Cell.h  Coord3D.h  Particle.h  ParticleProperies.h
src/Yaml/: ParticleGroup.h  ParticleSphere.h  YamlParser.cpp  YamlParser.h
